--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body { font-family: 'Roboto', sans-serif; line-height: 1.6; color: #333; background: #f4f6f8; }
     header { background: linear-gradient(135deg, #0f4c81, #1a73e8); color: #fff; text-align: center; padding: 80px 20px; }
+    header img { max-width: 150px; margin-bottom: 20px; }
     header h1 { font-size: 2.5em; margin-bottom: 10px; }
     header p { font-size: 1.2em; max-width: 800px; margin: 0 auto 20px auto; }
     .btn { display: inline-block; padding: 15px 30px; margin-top: 20px; background: #25d366; color: #fff; font-weight: bold; border-radius: 8px; text-decoration: none; transition: 0.3s; }
@@ -21,15 +22,17 @@
     ul, ol { padding-left: 20px; margin-top: 10px; }
     li { margin-bottom: 10px; }
     footer { background: #0f4c81; color: #fff; text-align: center; padding: 30px 20px; font-size: 1em; }
+    footer a { color: #fff; text-decoration: underline; margin: 0 5px; }
     @media(max-width: 768px){ header h1{ font-size: 2em; } header p{ font-size:1em;} }
   </style>
 </head>
 <body>
 
 <header>
+  <img src="logo.png" alt="ASSERT EXPRESS Logo">
   <h1>ASSERT EXPRESS – Serviços Regulatórios</h1>
   <p>Especialistas na <strong>criação, atualização e regularização do CNES</strong> para clínicas, consultórios e profissionais da saúde em todo o Brasil.</p>
-  <a class="btn" href="https://wa.me/556199947526" target="_blank">Fale no WhatsApp</a>
+  <a class="btn" href="https://wa.me/5561982153521" target="_blank">Fale no WhatsApp</a>
 </header>
 
 <section>
@@ -78,6 +81,11 @@
 
 <footer>
   <p>ASSERT EXPRESS – Serviços Regulatórios<br>Atendimento em todo o Brasil</p>
+  <p>
+    <a href="mailto:assert.express@outlook.com">assert.express@outlook.com</a> |
+    <a href="https://www.instagram.com/assert_express?igsh=M2k2ZXNhenc3aXlt" target="_blank">Instagram</a> |
+    <a href="https://wa.me/5561999947526" target="_blank">WhatsApp</a>
+  </p>
 </footer>
 
 </body>
