--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 
 <header>
-  <img src="assets/images/assert-removebg-preview (3).png" alt="ASSERT EXPRESS">
+  <img src="assert-removebg-preview (3).png" alt="ASSERT EXPRESS">
   <h1>ASSERT EXPRESS – Serviços Regulatórios</h1>
   <p>Especialistas na <strong>criação, atualização e regularização do CNES</strong> para clínicas, consultórios e profissionais da saúde em todo o Brasil.</p>
   <a class="btn" href="https://wa.me/5561999947526" target="_blank">Fale no WhatsApp</a>
