--- a/index.html
+++ b/index.html
@@ -5,31 +5,121 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ASSERT EXPRESS – Serviços Regulatórios | CNES</title>
   <meta name="description" content="Criação e atualização de CNES para clínicas e profissionais da saúde. Atendimento em todo o Brasil." />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { font-family: 'Roboto', sans-serif; line-height: 1.6; color: #333; background: #f4f6f8; }
-    header { background: linear-gradient(135deg, #0f4c81, #1a73e8); color: #fff; text-align: center; padding: 80px 20px; }
-    header img { max-width: 150px; margin-bottom: 20px; }
-    header h1 { font-size: 2.5em; margin-bottom: 10px; }
-    header p { font-size: 1.2em; max-width: 800px; margin: 0 auto 20px auto; }
-    .btn { display: inline-block; padding: 15px 30px; margin-top: 20px; background: #25d366; color: #fff; font-weight: bold; border-radius: 8px; text-decoration: none; transition: 0.3s; }
-    .btn:hover { background: #1ebe5b; }
-    section { padding: 60px 20px; max-width: 1100px; margin: auto; }
-    h2 { color: #0f4c81; margin-bottom: 20px; font-size: 2em; text-align: center; }
-    .box { background: #fff; padding: 40px; border-radius: 12px; box-shadow: 0 8px 20px rgba(0,0,0,0.1); margin-bottom: 40px; transition: transform 0.3s; }
-    .box:hover { transform: translateY(-5px); }
+    body {
+      font-family: 'Roboto', sans-serif;
+      line-height: 1.6;
+      color: #333;
+      background: #f4f6f8;
+      scroll-behavior: smooth;
+    }
+
+    /* HERO */
+    header {
+      background: linear-gradient(rgba(15,76,129,0.85), rgba(26,115,232,0.85)),
+                  url('https://images.unsplash.com/photo-1586773860418-d37222d8fce3?auto=format&fit=crop&w=1600&q=80');
+      background-size: cover;
+      background-position: center;
+      color: #fff;
+      text-align: center;
+      padding: 120px 20px;
+      animation: fadeIn 1.2s ease-in;
+    }
+
+    header img {
+      max-width: 170px;
+      margin-bottom: 25px;
+    }
+
+    header h1 {
+      font-size: 2.6em;
+      margin-bottom: 15px;
+    }
+
+    header p {
+      font-size: 1.2em;
+      max-width: 850px;
+      margin: 0 auto 25px auto;
+    }
+
+    .btn {
+      display: inline-block;
+      padding: 16px 34px;
+      background: #25d366;
+      color: #fff;
+      font-weight: bold;
+      border-radius: 50px;
+      text-decoration: none;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .btn:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.25);
+    }
+
+    section {
+      padding: 80px 20px;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    h2 {
+      color: #0f4c81;
+      margin-bottom: 30px;
+      font-size: 2.1em;
+      text-align: center;
+    }
+
+    .box {
+      background: #fff;
+      padding: 45px;
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.12);
+      margin-bottom: 50px;
+      opacity: 0;
+      transform: translateY(40px);
+      transition: all 0.8s ease;
+    }
+
+    .box.show {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
     ul, ol { padding-left: 20px; margin-top: 10px; }
     li { margin-bottom: 10px; }
-    footer { background: #0f4c81; color: #fff; text-align: center; padding: 30px 20px; font-size: 1em; }
-    footer a { color: #fff; text-decoration: underline; margin: 0 5px; }
-    @media(max-width: 768px){ header h1{ font-size: 2em; } header p{ font-size:1em;} }
+
+    footer {
+      background: #0f4c81;
+      color: #fff;
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    footer a {
+      color: #fff;
+      text-decoration: underline;
+      margin: 0 6px;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @media(max-width: 768px){
+      header h1 { font-size: 2em; }
+      header p { font-size: 1em; }
+    }
   </style>
 </head>
 <body>
 
 <header>
-  <img src="https://github.com/assertexpress/assertexpress.github.io/blob/main/assert-removebg-preview%20(3).png" alt="ASSERT EXPRESS" width="200"/>
+  <img src="https://raw.githubusercontent.com/assertexpress/assertexpress.github.io/main/assert-removebg-preview%20(3).png" alt="ASSERT EXPRESS" />
   <h1>ASSERT EXPRESS – Serviços Regulatórios</h1>
   <p>Especialistas na <strong>criação, atualização e regularização do CNES</strong> para clínicas, consultórios e profissionais da saúde em todo o Brasil.</p>
   <a class="btn" href="https://wa.me/5561999947526" target="_blank">Fale no WhatsApp</a>
@@ -48,7 +138,7 @@
 
   <div class="box">
     <h2>Riscos da irregularidade</h2>
-    <p>A ausência ou desatualização do CNES impede o reconhecimento do estabelecimento como unidade de saúde, conforme a Portaria nº 1.646/2015. Essa situação pode resultar em:</p>
+    <p>A ausência ou desatualização do CNES impede o reconhecimento do estabelecimento como unidade de saúde, conforme a Portaria nº 1.646/2015.</p>
     <ul>
       <li>Impossibilidade de novos credenciamentos;</li>
       <li>Bloqueio de reembolsos de atendimentos particulares;</li>
@@ -87,6 +177,19 @@
     <a href="https://wa.me/5561999947526" target="_blank">WhatsApp</a>
   </p>
 </footer>
+
+<script>
+  const boxes = document.querySelectorAll('.box');
+  const revealOnScroll = () => {
+    const trigger = window.innerHeight * 0.85;
+    boxes.forEach(box => {
+      const top = box.getBoundingClientRect().top;
+      if(top < trigger){ box.classList.add('show'); }
+    });
+  };
+  window.addEventListener('scroll', revealOnScroll);
+  revealOnScroll();
+</script>
 
 </body>
 </html>
