--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <div class="box">
     <h2>Como funciona</h2>
     <ol>
-      <li>Contato inicial via WhatsApp</li>
+      <li>Contato inicial via WhatsApp, E-mail (assert.express@outlook.com) ou pelo Direct do Instagram</li>
       <li>Análise da situação cadastral</li>
       <li>Orientação e solicitação de documentos</li>
       <li>Execução da criação ou atualização</li>
