--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
 <div class="card"><span>🛡️</span>Segurança regulatória</div>
 <div class="card"><span>📍</span>Atendimento nacional</div>
 </div>
-
+<section>
+  
   <div class="box">
     <h2>Por que o CNES é obrigatório?</h2>
     <p>O Cadastro Nacional de Estabelecimentos de Saúde (CNES) é obrigatório para o funcionamento legal de clínicas e consultórios. Um CNES ativo e atualizado garante conformidade legal e amplia oportunidades institucionais.</p>
