--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body{
   font-family:Roboto,sans-serif;
   background:#f4f6f8;
   color:#333;
-  line-height:1.7;
+  line-height:1.6;
   overflow-x:hidden;
 }
 
@@ -25,86 +25,93 @@ header{
   background-position:center;
   color:#fff;
   text-align:center;
-  padding:150px 20px;
+  padding:90px 20px;
 }
 header img{
-  max-width:260px; /* LOGO MAIOR */
-  margin-bottom:35px;
+  max-width:220px;
+  margin-bottom:25px;
 }
-header h1{font-size:2.6em;margin-bottom:20px}
-header p{max-width:900px;margin:auto;font-size:1.15em}
+header h1{
+  font-size:2.3em;
+  margin-bottom:15px;
+}
+header p{
+  max-width:850px;
+  margin:auto;
+  font-size:1.1em;
+}
 
 /* BOTÃO */
 .btn{
   display:inline-block;
-  margin-top:40px;
+  margin-top:28px;
   background:#25d366;
   color:#fff;
-  padding:18px 45px;
+  padding:14px 36px;
   border-radius:50px;
   text-decoration:none;
   font-weight:bold;
   transition:.3s;
 }
 .btn:hover{
-  transform:translateY(-4px);
-  box-shadow:0 12px 30px rgba(0,0,0,.3);
+  transform:translateY(-3px);
+  box-shadow:0 8px 22px rgba(0,0,0,.3);
 }
 
 /* SEÇÕES */
 section{
   max-width:1200px;
   margin:auto;
-  padding:110px 20px;
+  padding:60px 20px;
 }
 
-/* TAGS / CARDS */
+/* TAGS */
 h2{
   text-align:center;
   color:#0f4c81;
-  margin-bottom:60px;
-  font-size:2.3em;
+  margin-bottom:35px;
+  font-size:2em;
 }
 
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-  gap:40px;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:25px;
 }
 
 .card{
   background:#fff;
-  padding:45px;
-  border-radius:18px;
-  box-shadow:0 10px 30px rgba(0,0,0,.12);
+  padding:30px;
+  border-radius:16px;
+  box-shadow:0 8px 22px rgba(0,0,0,.12);
   text-align:center;
   opacity:0;
-  transform:translateY(50px);
-  transition:.8s ease;
+  transform:translateY(40px);
+  transition:.7s ease;
 }
 .card.show{
   opacity:1;
   transform:translateY(0);
 }
 .card span{
-  font-size:2.8em;
+  font-size:2.4em;
   display:block;
-  margin-bottom:20px;
+  margin-bottom:15px;
 }
 .card:hover{
-  transform:translateY(-10px);
+  transform:translateY(-6px);
 }
 
-/* BLOCOS GRANDES */
+/* BLOCOS */
 .section-block{
   background:#fff;
-  border-radius:22px;
-  padding:75px;
-  margin-bottom:100px;
-  box-shadow:0 12px 35px rgba(0,0,0,.12);
+  border-radius:20px;
+  padding:45px;
+  margin-bottom:55px;
+  box-shadow:0 10px 28px rgba(0,0,0,.12);
   opacity:0;
-  transform:translateY(60px);
-  transition:1s ease;
+  transform:translateY(45px);
+  transition:.9s ease;
 }
 .section-block.show{
   opacity:1;
@@ -113,45 +120,46 @@ h2{
 
 .section-block h2{
   text-align:left;
-  margin-bottom:35px;
+  margin-bottom:25px;
+  font-size:1.8em;
   position:relative;
 }
 .section-block h2::after{
   content:'';
-  width:70px;
-  height:4px;
+  width:55px;
+  height:3px;
   background:#1a73e8;
   position:absolute;
-  bottom:-10px;
+  bottom:-8px;
   left:0;
   border-radius:5px;
 }
 
 /* LISTAS */
 ul,ol{
-  margin-top:30px;
-  padding-left:25px;
+  margin-top:20px;
+  padding-left:22px;
 }
 li{
-  margin-bottom:18px;
+  margin-bottom:12px;
 }
 
 /* SERVIÇOS */
 .services{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:30px;
-  margin-top:40px;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:20px;
+  margin-top:25px;
 }
 .service-item{
   background:#f4f6f8;
-  padding:30px;
-  border-radius:16px;
+  padding:22px;
+  border-radius:14px;
   transition:.3s;
 }
 .service-item:hover{
-  transform:translateY(-6px);
-  box-shadow:0 10px 25px rgba(0,0,0,.12);
+  transform:translateY(-4px);
+  box-shadow:0 8px 20px rgba(0,0,0,.12);
 }
 
 /* FOOTER */
@@ -159,32 +167,41 @@ footer{
   background:#0f4c81;
   color:#fff;
   text-align:center;
-  padding:55px 20px;
+  padding:40px 20px;
 }
 footer a{
   color:#fff;
   text-decoration:underline;
-  margin:0 8px;
+  margin:0 6px;
 }
 
 /* WHATSAPP */
 .whatsapp{
   position:fixed;
-  bottom:30px;
-  right:30px;
+  bottom:25px;
+  right:25px;
   background:#25d366;
   color:#fff;
-  padding:18px 22px;
+  padding:14px 18px;
   border-radius:50%;
-  font-size:26px;
+  font-size:24px;
   text-decoration:none;
   animation:pulse 2s infinite;
   z-index:999;
 }
+
 @keyframes pulse{
   0%{transform:scale(1)}
-  50%{transform:scale(1.08)}
+  50%{transform:scale(1.07)}
   100%{transform:scale(1)}
+}
+
+/* MOBILE */
+@media(max-width:768px){
+  header img{max-width:180px}
+  header h1{font-size:2em}
+  section{padding:45px 18px}
+  .section-block{padding:35px}
 }
 </style>
 </head>
