--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ASSERT EXPRESS – Serviços Regulatórios | CNES</title>
+<title>ASSERT EXPRESS® – Serviços Regulatórios | CNES</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 
@@ -216,7 +216,7 @@ footer a{
 </header>
 
 <section>
-<h2>Por que escolher a ASSERT EXPRESS?</h2>
+<h2>Por que escolher a ASSERT EXPRESS®?</h2>
 <div class="grid">
   <div class="card"><span>⚖️</span>Conformidade legal</div>
   <div class="card"><span>⚡</span>Agilidade</div>
@@ -272,7 +272,7 @@ footer a{
 </section>
 
 <footer>
-<p>ASSERT EXPRESS – Serviços Regulatórios<br>Atendimento em todo o Brasil</p>
+<p>ASSERT EXPRESS – Serviços Regulatórios®<br>Atendimento em todo o Brasil</p>
 <p>
 <a href="mailto:assert.express@outlook.com">assert.express@outlook.com</a> |
 <a href="https://www.instagram.com/assert_express?igsh=M2k2ZXNhenc3aXlt" target="_blank">Instagram</a> |
